--- a/primoweb-static/package.json
+++ b/primoweb-static/package.json
@@ -29,5 +29,8 @@
     "@types/react-dom": "^18.2.4",
     "cross-env": "^7.0.3",
     "typescript": "^4.9.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
